p6_tests.log
Fri Apr 14 06:11:59 PM CDT 2023
gcc psort.c -Wall -Werror -pthread -O0 -o psort
psort.c: In function ‘main’:
psort.c:261:17: error: variable ‘end’ set but not used [-Werror=unused-but-set-variable]
  261 |     long start, end;
      |                 ^~~
psort.c:261:10: error: variable ‘start’ set but not used [-Werror=unused-but-set-variable]
  261 |     long start, end;
      |          ^~~~~
cc1: all warnings being treated as errors
make: *** [Makefile:4: psort] Error 1
